--- a/c7_index.html
+++ b/c7_index.html
@@ -12,18 +12,59 @@
 
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="js/slicknav.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/jquery.cookie-consent/dist/jquery.cookie-consent.min.js"></script>
 	<script type="text/javascript">
+		function createCookie(name, value, days) {
+			var expires;
+
+			if (days) {
+				var date = new Date();
+				date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+				expires = "; expires=" + date.toGMTString();
+			} else {
+				expires = "";
+			}
+			document.cookie = encodeURIComponent(name) + "=" + encodeURIComponent(value) + expires + "; path=/";
+		}
+
+		function readCookie(name) {
+			var nameEQ = encodeURIComponent(name) + "=";
+			var ca = document.cookie.split(';');
+			for (var i = 0; i < ca.length; i++) {
+				var c = ca[i];
+				while (c.charAt(0) === ' ')
+					c = c.substring(1, c.length);
+				if (c.indexOf(nameEQ) === 0)
+					return decodeURIComponent(c.substring(nameEQ.length, c.length));
+			}
+			return null;
+		}
+
+		function eraseCookie(name) {
+			createCookie(name, "", -1);
+		}
 		$(document).ready(function () {
-			$.cookieConsent();
-			$('#nav_menu').slicknav({
-				prependTo: "#mobilemenu",
-			});
+			$('#cookie').hide();
+			let name = readCookie('name')
+			if (name) {
+				$('#cookie').text(name)
+				$('#cookie').show();
+			} else {
+				$('#cookie').hide();
+				let promptvalue = prompt("Please enter your name", "");
+				if (promptvalue) {
+					createCookie('name', promptvalue, 1)
+				} else {
+					eraseCookie('name')
+				}
+			}
 		});
 	</script>
 </head>
 
 <body>
+	<div id="cookie" class="cookie">
+
+	</div>
 	<header>
 		<img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
@@ -102,8 +143,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2023, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
-		<p>Ahmer Mustafa</p>
+		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
 
